--- a/todolist/src/index.css
+++ b/todolist/src/index.css
@@ -29,8 +29,8 @@ body{
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     border-radius: 0;
   }
-  .form-contraol:enabled{
-    background-color: rgba(255, 176, 189, 0.5);
+  .form-control:enabled{
+    background-color: rgba(255, 176, 189, 0);
   }
   
   .form-control:disabled{
